--- a/.gitignore
+++ b/.gitignore
@@ -273,3 +273,4 @@ dist
 # Support for Project snippet scope
 
 # End of https://www.toptal.com/developers/gitignore/api/intellij,node,visualstudiocode
+/.idea/
