--- a/tin-projekt-miszczuk-s21174/package.json
+++ b/tin-projekt-miszczuk-s21174/package.json
@@ -6,16 +6,18 @@
     "start": "nodemon ./bin/www"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "ejs": "^3.1.6",
     "express": "~4.16.1",
+    "express-session": "^1.17.2",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
     "mysql2": "^2.3.3-rc.0",
+    "nodemon": "^2.0.15",
     "sequelize": "^6.9.0",
-    "start": "^5.1.0",
-    "nodemon": "^2.0.15"
+    "start": "^5.1.0"
   }
 }
